# packagerix

./: .gitattributes  .gitignore  0001-add-usage-tracking.patch  CLAUDE.md  README.md  ccl_to_json.py  cclq.py  extract_function_calls.jq  flake.nix  maintenance.py  ollama_test_script.sh  paketerix.py  pyproject.toml
.github/workflows/: README.md  run-maintenance-batch.yml  run-with-dataset.yml  train-on-dataset.yml
app/: chat_paketerix.py  config.py  coordinator.py  flake.py  future_additions.py  model_config.py  model_config_dialog.py  model_prompts.py  nix.py  packaging_coordinator.py  paketerix.py  parsing.py  secret_keys.py  secure_keys.py  terminal_model_config.py  textual_ui.py
app/packaging_flow/: __init__.py  model_prompts.py  run.py  user_prompts.py
app/ui/: __init__.py  model_config.py
app/ui/raw_terminal/: __init__.py  terminal_model_config.py
app/ui/textual/: __init__.py  model_config_dialog.py  textual_ui.py  textual_ui_adapter.py
ccl_schema/: cost_metadata.ccl.schema  function_call.ccl.schema  model_req_resp.ccl.schema  nix_error.ccl.schema  run.ccl.schema
nix/: generate-embeddings.py  package-embeddings.nix
research/: cat_issues.sh  extract_fetchers_from_ccl.py  fetch_nixpkgs_issues.py  generate_nurl_fetches.py  hard_maintenance_05_02_2025.csv  maintenance_02_02_2025.csv  maintenance_05_02_2025.csv  maintenance_09_02_2025.csv  maintenance_feb.csv  nixpkgs_packaging_requests_training.csv  single_fetcher_2025-08-01_2025-11-20.csv
research/maintenance/: stats_summary.csv  stats_tool_averages.csv
research/maintenance/407927-david-swift-Memorize/: config.json
research/october_25_dataset/: used_during_implementation.csv
research/october_25_dataset/fetchers/: DGoldDragon28,Unangband.nix  Einsums,Einsums.nix  GameDevTecnico,cubos.nix  HoshinoSuzumi,chronoframe.nix  Tongsuo-Project,RustyVault.nix  ajm4n,adPEAS.nix  ajwdewit,pcse.nix  alinshans,mytinystl.nix  arcan1s,awesome-widgets.nix  arkflow-rs,arkflow.nix  astronomer,astronomer.nix  audiofilter,pumpfun-pumpswap-sniper-copy-trading-bot.nix  canboat,canboat.nix  casper-network,casper-node.nix  drinfy,sharpy-sc2.nix  (+27 more)
research/packaging_requests/: mumu-lhl,Ciyue.nix  post_project_evaluation.csv
scripts/: compare_maintenance_results.py  extract_post_rev.py  extract_pre_packages.py  id_range_parser.py  test_matrix_creation.py
src/packagerix/: __main__.py  config.py  errors.py  flake.py  function_calls.py  function_calls_source.py  future_additions.py  main.py  nix.py  parsing.py  secure_keys.py
src/vibenix/: __main__.py  agent.py  ccl_log.py  ccl_log_safe.py  config.py  errors.py  flake.py  function_calls.py  function_calls_source.py  future_additions.py  git_info.py  main.py  maintenance.py  model_config.py  nix.py  nixpkgs_lock.py  parsing.py  secure_keys.py  usage_utils.py
template/: flake.nix  package.nix
tests/: conftest.py  test_function_calls.py  test_model_integration.py
(+224 files in other folders)
