[project]
name = "vibenix"
version = "0.1.0"
description = "LLM-assisted packaging with Nix"
authors = [{name = "Martin Schwaighofer", email = "martin.schwaighofer@ins.jku.at"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "setuptools",
    "wheel",
    "textual",
    "rich",
    "requests",
    "beautifulsoup4",
    "diskcache",
    "pydantic",
    "GitPython",
    "pydantic-ai",
    "httpx",
    "openai",
    "google-genai",
    "loguru",
    "keyring",
    "keyrings.alt",
    "ddgr (>=2.2,<3.0)",
    "pytest>=8.4.1",
    "magika>=0.6.2",
    "scikit-learn>=1.7.0",
    "tokenizers>=0.21,<0.22",
    "genai-prices>=0.0.31",
    "tiktoken>=0.12.0",
]

[project.scripts]
vibenix = "vibenix.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibenix = [
    "template/*",
    "packaging_flow/model_prompts/**/*.md",
    "packaging_flow/model_prompts/*.md"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_paths = ["src"]
addopts = "-v --tb=short"
